style.css
/* @font-face {
    font-family: 'wotfardregular';
    src: url('./fonts/Wotfard/wotfard-regular-webfont.eot');
    src: url('wotfard-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('./fonts/Wotfard/wotfard-regular-webfont.woff2') format('woff2'),
         url('./fonts/Wotfard/wotfard-regular-webfont.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
} */

.roboto {
  font-family: "Roboto", sans-serif;
  font-optical-sizing: auto;
  font-weight: normal;
  font-style: normal;
  font-variation-settings:"width" 100;
}

html {
    box-sizing: border-box;
}

*,
* ::after,
* ::before {
    box-sizing: inherit;
    margin: 0;
    padding: 0;
}

body {
    height: 100vh;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

ul {
    list-style: none;

    display: flex;
    justify-content: space-between;
    gap: 30px;
}

a {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
}

.background {
    /* I have to specify the width, because I have the body with
    align-items: center, which stops the default behavior that is
    'stretch', which makes it as wide as the content inside.*/
    width: 100%;

    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #1F2937;
}

header {
    display: flex;
    flex-direction: column;

    padding: 20px 0px 60px;
    gap: 80px;
    min-width: 800px;
    max-width: 1200px;
    margin: 0px 40px;
}

.header-container {
    display: flex;
    justify-content: space-between;
}

.header-container .logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: 900;
}

.introduction-container {
    display: flex;
    gap: 40px;
    min-height: 240px;
    max-height: 240px;
}

.introduction-container .content-container {
    display: flex;
    flex-direction: column;
    gap: 10px;
    min-width: 340px;
}

.content-container h1 {
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 900;
}

.content-container p {
    color: #E5E7EB;
    font-size: 18px;
}

.content-container button {
    font-weight: bold;

    background-color: #3882F6;
    color: #E5E7EB;

    border: none;
    border-radius: 5px;

    height: 30px;
    width: 100px;
}

.img-container {
    flex: 0 0 500px;

    display: flex;
    justify-content: center;
    align-items: center;
    height: 240px;

    background-color: rgba(255, 255, 255, 0.2);
    color: #E5E7EB;
}

.main {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
}

.main h2 {
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
}

.main .cards-container {
    display: flex;
    gap: 50px;
    margin: 0px 20px;
}

.card {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    max-width: 140px;
    gap: 8px;
    color: #1F2937;
}

.top-part {
    border: 3px solid #3882F6;
    border-radius: 20px;
    width: 140px;
    height: 140px;
}

.card p {
    font-size: 13px;
}

.quote-container-bg {
    width: 100%;
    height: 280px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: #E5E7EB;
}

.quote-container {
    display: flex;
    flex-direction: column;
    width: 800px;
    padding: 40px 0px;

    max-height: 100%;
    min-height: 100%;
}

.quote {
    display: flex;
    width: 800px;
    font-size: 36px;
    font-weight: 100;
    color: #1F2937;

    max-height: 100%;
    min-height: 100%;
}

.quote-author {
    display: flex;
    align-self: flex-end;
    font-size: 18px;
    font-weight: 500;
    color: #1F2937;
}

.sign-up-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    padding: 12px;
}

.sign-up {
    display: flex;
    width: 800px;
    min-width: 650px;
    justify-content: space-between;
    align-items: center;
    padding: 30px 100px;
    border-radius:10px;
    background-color: #3882F6;
    color: #E5E7EB;
}

.sign-up-content p {
    font-size: 12px;
}

.sign-up button {
    font-weight: bold;

    background-color: transparent;
    color: #E5E7EB;

    border: 2px solid #E5E7EB;
    border-radius: 5px;

    height: 30px;
    width: 100px;
}

footer {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 60px;
    color: #E5E7EB;
    font-size: 14px;
    background-color: #1F2937;
}

